chore: prevent formatting of .txt files (simai src)

--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,9 @@ trim_trailing_whitespace = true
 [*.yml]
 indent_style = space
 indent_size = 2
+
+[*.txt]
+charset = unset
+end_of_line = unset
+insert_final_newline = unset
+trim_trailing_whitespace = unset
