--- a/crates/simai/Cargo.toml
+++ b/crates/simai/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2024"
 bitflags = "2.9.4"
 chumsky = "0.10.1"
 fraction = "0.15.3"
+
+[dev-dependencies]
+insta = { version = "1.46.3", features = ["glob"] }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
