--- a/crates/simai/Cargo.toml
+++ b/crates/simai/Cargo.toml
@@ -4,11 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bitflags = "2.9.4"
+bitflags = { version = "2.9.4", features = ["serde"] }
 chumsky = "0.10.1"
-fraction = "0.15.3"
+fraction = { version = "0.15.3", features = ["with-serde-support"] }
+serde = { version = "1.0.228", features = ["derive"] }
 
 [dev-dependencies]
 insta = { version = "1.46.3", features = ["glob"] }
-serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
